Prelozeno index.html a uvodni obrazovka

--- a/words.html
+++ b/words.html
@@ -43,19 +43,19 @@ Thanks again!
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="meta_title">
-The Evolution of Trust
+Vývoj vzájemné důvěry
 </p>
 <p id="meta_desc">
-an interactive guide to the game theory of why &amp; how we trust each other
+interaktivní průvodce vysvětlení toho, proč a jak si vzájemně věříme za pomocí teorie her
 </p>
 <p id="meta_loading">
-loading...
+načítání...
 </p>
 <p id="meta_on">
-ON
+ZAP
 </p>
 <p id="meta_off">
-OFF
+VYP
 </p>
 
 
@@ -64,29 +64,27 @@ OFF
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="title">
-<span style="font-size:0.75em">THE</span><br>
-EVOLUTION<br>
-<span style="font-size:0.75em">OF TRUST</span>
+<span style="font-size:0.75em">Vývoj</span><br>
+vzájemné<br>
+<span style="font-size:0.75em">důvěry</span>
 </p>
 <p id="subtitle">
 
-playing time: 30 min &#8226; by nicky case, july 2017
+herní čas: 30 min &#8226; vytvořil nicky case, červenec 2017
 
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
-<!--
 <br>
-translated by YOUR NAME HERE
+přeložili: Tomáš Látal, ...
 &#8226;
-<a href="http://ncase.me/trust/">original English version</a>
--->
+<a href="http://ncase.me/trust/">původní anglická verze</a>
 
 </p>
 
 <p id="loading">
-loading...
+načítání...
 </p>
 <p id="loading_done">
-PLAY &rarr;
+HRÁT &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
