--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@ Many thanks again!
 <head>
 
 	<!-- TO TRANSLATE: "title", "description" -->
-	<title>The Evolution of Trust</title>
-	<meta name="description" content="an interactive guide to the game theory of why &amp; how we trust each other"/>
+	<title>Vývoj důvěry</title>
+	<meta name="description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta itemprop="name" content="The Evolution of Trust">
-	<meta itemprop="description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta itemprop="name" content="Vývoj důvěry">
+	<meta itemprop="description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her">
 	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="The Evolution of Trust">
-	<meta name="twitter:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta name="twitter:title" content="Vývoj důvěry">
+	<meta name="twitter:description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta property="og:title" content="The Evolution of Trust">
+	<meta property="og:title" content="Vývoj důvěry">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
-	<meta property="og:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta property="og:description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/slides.css?v7">
@@ -60,7 +60,7 @@ Many thanks again!
 
 </head>
 <body>
-	<div id="preloader">loading...</div> <!-- TRANSLATE THIS -->
+	<div id="preloader">načítání...</div> <!-- TRANSLATE THIS -->
 	<div style="display:none" id="main">
 		<div id="slideshow_container">
 			<div id="slideshow"></div>
@@ -70,15 +70,15 @@ Many thanks again!
 	<div style="display:none" id="footer">
 		<div id="sound" sound="on" class="no-select">
 			<div id="sound_icon"></div>
-			<div id="sound_on">ON</div> <!-- TRANSLATE THIS -->
-			<div id="sound_off">OFF</div> <!-- TRANSLATE THIS -->
+			<div id="sound_on">ZAP</div> <!-- TRANSLATE THIS -->
+			<div id="sound_off">VYP</div> <!-- TRANSLATE THIS -->
 		</div>
 		<div id="select"></div>
 
 		<!-- TRANSLATE "title" & "text". Make sure it's less than 112 characters, for Twitter's sake -->
 		<!-- Also, change "link" to whatever the link for the translated version will be! -->
-		<sharing title="The Evolution of Trust"
-				 text="People no longer trust each other. Why? And how can we fix it? An interactive guide to the game theory of trust:"
+		<sharing title="Vývoj důvěry"
+				 text="Lidé si vzájemně nevěří. Proč? A jak to můžeme napravit? Interaktivní průvodce důvěry mezi lidmi vysvětlené pomocí teorie her:"
 				 link="http://ncase.me/trust/"></sharing>
 
 		<!-- List of translations thus far! -->
@@ -86,6 +86,7 @@ Many thanks again!
 			fan-translations so far:
 			<a href="https://github.com/ncase/trust#how-to-translate-this-thang" target="_blank">(add your own!)</a> |
 			<a href="https://ccamara.github.io/trust/">Español de España</a> |
+			<a href="https://kraklin.github.io/trust/">Česky</a> |
 			<a href="https://ayowel.github.io/trust/">Français</a> | 
 			<a href="https://jkoelling.github.io/trust/">Deutsch</a> |
 			<a href="https://lvdt.github.io/trust/">Italiano</a> |
