Translated Intro + some small fixes

--- a/words.html
+++ b/words.html
@@ -43,10 +43,10 @@ Thanks again!
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="meta_title">
-Vývoj vzájemné důvěry
+Důvěra
 </p>
 <p id="meta_desc">
-interaktivní průvodce vysvětlení toho, proč a jak si vzájemně věříme za pomocí teorie her
+interaktivní hra, která za pomoci teorie her vysvětluje, proč a jak si vzájemně věříme
 </p>
 <p id="meta_loading">
 načítání...
