--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ Many thanks again!
 
 	<!-- TO TRANSLATE: "title", "description" -->
 	<title>Vývoj důvěry</title>
-	<meta name="description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her"/>
+
+	<meta name="description" content="interaktivní hra, která vysvětluje proč a jak si vzájemně věříme za pomocí teorie her"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
@@ -36,14 +37,14 @@ Many thanks again!
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta itemprop="name" content="Vývoj důvěry">
-	<meta itemprop="description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her">
+	<meta itemprop="description" content="interaktivní hra, která vysvětluje proč a jak si vzájemně věříme za pomocí teorie her">
 	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
 	<meta name="twitter:title" content="Vývoj důvěry">
-	<meta name="twitter:description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her">
+	<meta name="twitter:description" content="interaktivní hra, která vysvětluje proč a jak si vzájemně věříme za pomocí teorie her">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
 
@@ -52,7 +53,7 @@ Many thanks again!
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
-	<meta property="og:description" content="interaktivní průvodce toho, proč a jak věříme jeden druhému - vysvětlení pomocí teorie her">
+	<meta property="og:description" content="interaktivní hra, která vysvětluje proč a jak si vzájemně věříme za pomocí teorie her">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/slides.css?v7">
@@ -78,15 +79,14 @@ Many thanks again!
 		<!-- TRANSLATE "title" & "text". Make sure it's less than 112 characters, for Twitter's sake -->
 		<!-- Also, change "link" to whatever the link for the translated version will be! -->
 		<sharing title="Vývoj důvěry"
-				 text="Lidé si vzájemně nevěří. Proč? A jak to můžeme napravit? Interaktivní průvodce důvěry mezi lidmi vysvětlené pomocí teorie her:"
+				 text="Lidé si vzájemně nevěří. Proč? A jak to můžeme napravit? Interaktivní průvodce, který pomocí teorie her vysvětluje jak se vyvíjí důvěra mezi lidmi:"
 				 link="http://ncase.me/trust/"></sharing>
 
 		<!-- List of translations thus far! -->
 		<div id="translations">
 			fan-translations so far:
-			<a href="https://github.com/ncase/trust#how-to-translate-this-thang" target="_blank">(add your own!)</a> |
-			<a href="https://ccamara.github.io/trust/">Español de España</a> |
 			<a href="https://kraklin.github.io/trust/">Česky</a> |
+			<a href="https://ccamara.github.io/trust/">Español de España</a> |
 			<a href="https://ayowel.github.io/trust/">Français</a> | 
 			<a href="https://jkoelling.github.io/trust/">Deutsch</a> |
 			<a href="https://lvdt.github.io/trust/">Italiano</a> |
