Translated Intro and On-off

--- a/words.html
+++ b/words.html
@@ -64,9 +64,8 @@ VYP
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="title">
-<span style="font-size:0.75em">Vývoj</span><br>
-vzájemné<br>
-<span style="font-size:0.75em">důvěry</span>
+<span style="font-size:0.75em">Vzájemná</span><br>
+důvěra<br>
 </p>
 <p id="subtitle">
 
@@ -92,29 +91,29 @@ HRÁT &rarr;
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="intro">
-During World War I, peace broke out.
+Během 1. světové války vzniklo nečekané období míru.
 <br><br>
 
-It was Christmas 1914 on the Western Front.<br>
-Despite strict orders <i>not</i> to chillax with the enemy, British<br>
-and German soldiers left their trenches, crossed No Man's Land,<br>
-and gathered to bury their dead, exchange gifts, and play games.
+Bylo to na Vánoce v roce 1914 na západní frontě.<br>
+I přes přímý rozkaz <i>nekamarádit se</i> s nepřítelem, britští<br>
+a němečtí vojáci opustili zákopy, překročili území nikoho<br>
+aby mohli pohřbít mrtvé, vyměnili si vánoční dárky a hráli hry. 
 <br><br>
 
-Meanwhile: it's 2017, the West has been at peace for decades, and<br>
-wow, we <i>suck</i> at trust. Surveys show that, over the past forty years,
-fewer and fewer people say they trust each other. So here's our puzzle:
+Zatímco v roce 2017 zažívá Západ mír už po desetilí a<br>
+wow, jsme na tom <i>bídně</i> ohledně důvěry. Průzkumy ukazují, že v průběhy posledních 40 let
+stále méně a méně lidí důvěřuje jeden druhému. A zde je náš hlavolam:
 <br><br>
 
-<b>Why, even in peacetime, do friends become enemies?<br>
-And why, even in wartime, do enemies become friends?</b>
+<b>Proč se, dokonce v období míru, stávají z přátel nepřátelé?<br>
+A proč se, dokonce i za války, z nepřátel stávají přátelé?</b>
 <br><br>
 
-I think <b>game theory</b> can help explain our epidemic of distrust –<br>
-and how we can fix it! So, to understand all this...
+Domnívám se, že <b>teorie her</b> může objasnit tuto epidemii nedůvěry –<br>
+a jak ji napravit! Takže abychom tomu všemu porozuměli...
 </p>
 <p id="intro_button">
-...let's play a game. &rarr;
+...pojďme si zahrát hru. &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -122,85 +121,85 @@ and how we can fix it! So, to understand all this...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_you_cooperate">
-you<br>cooperate
+ty<br>spolupracuješ
 </p>
 
 <p id="label_you_cheat">
-you<br>cheat
+ty<br>podvádíš
 </p>
 
 <p id="label_they_cooperate">
-they<br>cooperate
+oni<br>spolupracují
 </p>
 
 <p id="label_they_cheat">
-they<br>cheat
+oni<br>spolupracují
 </p>
 
 <p id="label_you">
-you<br>↙
+ty<br>↙
 </p>
 <p id="label_them">
-other player<br>↘
+protihráč<br>↘
 </p>
 
 <p id="oneoff_0_top">
 
-<b>THE GAME OF TRUST</b>
+<b>HRA NA DŮVĚRU</b>
 <br>
-You have one choice.
-In front of you is a machine: if you put a coin in the machine,
-the <i>other player</i> gets three coins – and vice versa.
-You both can either choose to COOPERATE (put in coin), or CHEAT (don't put in coin).
+Máš pouze jednu možnost.
+před tebou je stroj: pokud vložíš do stroje minci,
+tak <i>protihráč</i> dostane tři mince – a obráceně.
+Oba se můžete rozhodnout SPOLUPRACOVAT (vložit minci), nebo PODVÁĎET (nevložit minci).
 </p>
 
 <p id="oneoff_0_btm">
-<b>Let's say the other player cheats, and doesn't put in a coin.</b><br>
-What should you do?
+<b>Řekněme, že protihráč podvádí a nevloží minci.</b><br>
+Co by jsi měl udělat?
 </p>
 
 <p id="oneoff_1_cheated">
-Exactly! Why let that moocher mooch off of you?
+Přesně! Proč nechat skrblíka aby na tobě zbohatnul?
 </p>
 
 <p id="oneoff_1_cooperated">
-Alas, turning the other cheek just gets you slapped!
+Ale ne, nastavit druhou tvář znamená dostat facku z jiné strany!
 </p>
 
 <p id="oneoff_1_top">
-If you cooperate &amp; they cheat, you lose a coin while they gain three. (score: -1 vs +3)
-However, if you both cheat, neither of you gain or lose anything. (score: 0 vs 0)
-<b>Therefore: you should CHEAT.</b>
+Pokud spolupracuješ &amp; ostatní podvádí, ztratíš minci, zatímco ostatní získají tři. (skóre: -1 vs +3)
+Nicméně, pokud oba podvádíte, nikdo nedostane nic. (score: 0 vs 0)
+<b>Proto: měl by jsi PODVÁĎET.</b>
 </p>
 
 <p id="oneoff_1_btm">
-<b>But let's say the other player cooperates, and puts in a coin.</b><br>
-What should you do now?
+<b>Ale řekněme, že protihráč bude spolupracovat a vloží minci.</b><br>
+Co by jsi měl udělat ty?
 </p>
 
 <p id="oneoff_2_cheated">
-Wow, that's mean... and also the correct answer!
+Wow, to je ošklivé... a také správné!
 </p>
 
 <p id="oneoff_2_cooperated">
-Sure, seems like the right thing to do... <b>OR IS IT??</b>
+Jasně, je to správná věc... NEBO NE??</b>
 </p>
 
 <p id="oneoff_2_top">
-Because if you both cooperate, you both give up a coin to gain three. (score: +2 vs +2)
-But if you cheat &amp; they cooperate, you gain three coins at their cost of one. (score: +3 vs -1)
-<b>Therefore: you "should" still CHEAT.</b>
+Protože pokud oba spolupracujete, vzdáváte se zisku tří mincí. (score: +2 vs +2)
+Ale pokud budeš podvádět &amp; ostaní spolupracovat, získáš tři mince zatím co ostatní o jednu přijdou. (score: +3 vs -1)
+<b>Proto "měl by" jsi stále PODVÁĎET.</b>
 </p>
 
 <p id="oneoff_2_btm">
-And <i>that's</i> our dilemma.
-Trust is nice, but it can let others take advantage of you -- or shoot you as you come unarmed out of a trench.
-Sometimes, distrust <i>is</i> rational!
-But now, what happens if we play this game...
+A <i>toto</i> je právě naše dilemma.
+Důvěra je krásná věc, ale ostatní ji mohou zneužít -- nebo tě zastřelit, když vylezeš ze zákopu neozbrojený.
+Někdy <i>je</i> nedůvěra racionální!
+Co se ale stane, pokud si tuto hru...
 </p>
 
 <p id="oneoff_button_next">
-...more than once? &rarr;
+...zahrajeme vícekrát? &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
