Small text fixes and tweaks

--- a/words.html
+++ b/words.html
@@ -97,20 +97,20 @@ Během 1. světové války vzniklo nečekané období míru.
 Bylo to na Vánoce v roce 1914 na západní frontě.<br>
 I přes přímý rozkaz <i>nekamarádit se</i> s nepřítelem, britští<br>
 a němečtí vojáci opustili zákopy, překročili území nikoho<br>
-aby mohli pohřbít mrtvé, vyměnili si vánoční dárky a hráli hry. 
+aby pohřbili mrtvé, vyměnili si vánoční dárky a hráli hry. 
 <br><br>
 
-Zatímco v roce 2017 zažívá Západ mír už po desetilí a<br>
-wow, jsme na tom <i>bídně</i> ohledně důvěry. Průzkumy ukazují, že v průběhy posledních 40 let
-stále méně a méně lidí důvěřuje jeden druhému. A zde je náš hlavolam:
+Mezitím v roce 2017 zažívá západní svět mír už po desetilí a<br>
+s důvěrou jsme na tom <i>mizerně</i>. Průzkumy ukazují, že v průběhu posledních 40 let
+stále méně a méně lidí důvěřuje jeden druhému. A tak se můžeme ptát:
 <br><br>
 
 <b>Proč se, dokonce v období míru, stávají z přátel nepřátelé?<br>
 A proč se, dokonce i za války, z nepřátel stávají přátelé?</b>
 <br><br>
 
-Domnívám se, že <b>teorie her</b> může objasnit tuto epidemii nedůvěry –<br>
-a jak ji napravit! Takže abychom tomu všemu porozuměli...
+Domnívám se, že <b>teorie her</b> může tento problém objasnit –<br>
+a také jej vyřešit! Takže abychom tomu všemu porozuměli...
 </p>
 <p id="intro_button">
 ...pojďme si zahrát hru. &rarr;
@@ -133,7 +133,7 @@ oni<br>spolupracují
 </p>
 
 <p id="label_they_cheat">
-oni<br>spolupracují
+oni<br>podvádí
 </p>
 
 <p id="label_you">
@@ -150,11 +150,11 @@ protihráč<br>↘
 Máš pouze jednu možnost.
 před tebou je stroj: pokud vložíš do stroje minci,
 tak <i>protihráč</i> dostane tři mince – a obráceně.
-Oba se můžete rozhodnout SPOLUPRACOVAT (vložit minci), nebo PODVÁĎET (nevložit minci).
+Oba se můžete rozhodnout SPOLUPRACOVAT (vložit minci), nebo PODVÁĎET (minci nevkládat).
 </p>
 
 <p id="oneoff_0_btm">
-<b>Řekněme, že protihráč podvádí a nevloží minci.</b><br>
+<b>Řekněme, že protihráč podvádí a minci do stroje nevloží.</b><br>
 Co by jsi měl udělat?
 </p>
 
@@ -168,7 +168,7 @@ Ale ne, nastavit druhou tvář znamená dostat facku z jiné strany!
 
 <p id="oneoff_1_top">
 Pokud spolupracuješ &amp; ostatní podvádí, ztratíš minci, zatímco ostatní získají tři. (skóre: -1 vs +3)
-Nicméně, pokud oba podvádíte, nikdo nedostane nic. (score: 0 vs 0)
+Nicméně, pokud oba podvádíte, nikdo nedostane nic. (skóre: 0 vs 0)
 <b>Proto: měl by jsi PODVÁĎET.</b>
 </p>
 
@@ -186,14 +186,14 @@ Jasně, je to správná věc... NEBO NE??</b>
 </p>
 
 <p id="oneoff_2_top">
-Protože pokud oba spolupracujete, vzdáváte se zisku tří mincí. (score: +2 vs +2)
-Ale pokud budeš podvádět &amp; ostaní spolupracovat, získáš tři mince zatím co ostatní o jednu přijdou. (score: +3 vs -1)
-<b>Proto "měl by" jsi stále PODVÁĎET.</b>
+Pokud oba spolupracujete, vzdáváte se zisku tří mincí. (score: +2 vs +2)
+Ale když budeš podvádět &amp; ostaní spolupracovat, získáš tři mince a ostatní o jednu přijdou. (score: +3 vs -1)
+<b>Proto "by jsi měl" stále PODVÁĎET.</b>
 </p>
 
 <p id="oneoff_2_btm">
-A <i>toto</i> je právě naše dilemma.
-Důvěra je krásná věc, ale ostatní ji mohou zneužít -- nebo tě zastřelit, když vylezeš ze zákopu neozbrojený.
+A <i>toto</i> je naše dilemma.
+Důvěra je krásná věc, ale ostatní ji mohou zneužít - například tě zastřelit, když vylezeš ze zákopu neozbrojený.
 Někdy <i>je</i> nedůvěra racionální!
 Co se ale stane, pokud si tuto hru...
 </p>
