Title renamed - still fighting with it

--- a/words.html
+++ b/words.html
@@ -64,8 +64,8 @@ VYP
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="title">
-<span style="font-size:0.75em">Vzájemná</span><br>
-důvěra<br>
+<span style="font-size:0.75em">Evoluce</span><br>
+důvěry<br>
 </p>
 <p id="subtitle">
 
