--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Many thanks again!
 <head>
 
 	<!-- TO TRANSLATE: "title", "description" -->
-	<title>Vývoj důvěry</title>
+	<title>Evoluce důvěry</title>
 
 	<meta name="description" content="interaktivní hra, která vysvětluje proč a jak si vzájemně věříme za pomocí teorie her"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
@@ -36,20 +36,20 @@ Many thanks again!
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta itemprop="name" content="Vývoj důvěry">
+	<meta itemprop="name" content="Evoluce důvěry">
 	<meta itemprop="description" content="interaktivní hra, která vysvětluje proč a jak si vzájemně věříme za pomocí teorie her">
 	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="Vývoj důvěry">
+	<meta name="twitter:title" content="Evoluce důvěry">
 	<meta name="twitter:description" content="interaktivní hra, která vysvětluje proč a jak si vzájemně věříme za pomocí teorie her">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta property="og:title" content="Vývoj důvěry">
+	<meta property="og:title" content="Evoluce důvěry">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
@@ -78,7 +78,7 @@ Many thanks again!
 
 		<!-- TRANSLATE "title" & "text". Make sure it's less than 112 characters, for Twitter's sake -->
 		<!-- Also, change "link" to whatever the link for the translated version will be! -->
-		<sharing title="Vývoj důvěry"
+		<sharing title="Evoluce důvěry"
 				 text="Lidé si vzájemně nevěří. Proč? A jak to můžeme napravit? Interaktivní průvodce, který pomocí teorie her vysvětluje jak se vyvíjí důvěra mezi lidmi:"
 				 link="http://ncase.me/trust/"></sharing>
 
