--- a/words.html
+++ b/words.html
@@ -1137,15 +1137,15 @@ Randomly cheats or cooperates with 50-50 chance
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_cooperate">
-cooperate
+Spolupracovat
 </p>
 
 <p id="label_cheat">
-cheat
+Podvádět
 </p>
 
 <p id="label_play">
-play
+hrát
 </p>
 
 <p id="label_start">
@@ -1157,7 +1157,7 @@ STOP
 </p>
 
 <p id="label_step">
-step
+krok
 </p>
 
 <p id="label_reset">
@@ -1165,7 +1165,7 @@ reset
 </p>
 
 <p id="label_population">
-population
+populace
 </p>
 
 <p id="label_payoffs">
@@ -1173,15 +1173,15 @@ payoffs
 </p>
 
 <p id="label_rules">
-rules
+pravidla
 </p>
 
 <p id="label_next">
-next &rarr;
+další &rarr;
 </p>
 
 <p id="label_continue">
-continue
+pokračovat
 </p>
 
 
@@ -1190,32 +1190,32 @@ continue
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="chapter_intro">
-0. Introduction
+0. Úvod
 </p>
 <p id="chapter_oneoff">
-1. One Game
+1. Jedna hra
 </p>
 <p id="chapter_iterated">
-2. Repeated Game
+2. Opakovaná hra
 </p>
 <p id="chapter_tournament">
-3. One Tournament
+3. Turnaj
 </p>
 <p id="chapter_evolution">
-4. Repeated Tournament
+4. Opakovaný turnaj
 </p>
 <p id="chapter_distrust">
-5. The Evolution of Distrust
+5. Evoluce nedůvěry
 </p>
 <p id="chapter_noise">
-6. Making Mistaeks
+6. Děláňý chyb
 </p>
 <p id="chapter_sandbox">
-7. Sandbox Mode
+7. Sandbox mód
 </p>
 <p id="chapter_conclusion">
-8. Conclusion
+8. Závěr
 </p>
 <p id="chapter_credits">
-9. Credits
+9. Titulky
 </p>
