Translated Repeated game and players labels

--- a/words.html
+++ b/words.html
@@ -207,88 +207,89 @@ Co se ale stane, pokud si tuto hru...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="iterated_intro_top">
-<b>Now, let's play for real.</b>
-You'll be playing against 5 different opponents, each with their own game "strategy".
-With each opponent, you'll play anywhere between 3 to 7 rounds.
-(You won't know in advance when the last round is)
-Can you trust them? Or rather... can they trust <i>you?</i>
+<b>Pojďme si zahrát doopravdy.</b>
+Budeš hrát proti 5 různým soupeřům. Každý z nich má svou "strategii".
+S každým protihráčem sehrajete mezi 3 až 7 koly.
+(Nebudeš dopředu vědět, které kolo je poslední)
+Můžeš jim věřit? Nebo spíš... mohou věřit oni <i>tobě</i>?
 </p>
 
 <p id="iterated_intro_btm">
-Pick your first, <i>real</i> move. <b>Choose wisely.</b>
+Vyber svůj první, <i>opravdový</i> tah. <b>Vybírej moudře.</b>
 </p>
 
 <p id="iterated_info_1">
-opponent: [X] of [Y]
+soupeř: [X] z [Y]
 </p>
 </p>
 <p id="iterated_info_2">
-your total score: 
+tvé celkové skóre: 
 </p>
 
 <p id="iterated_score_start">
-And your total score is...
+A tvé výsledné skóre je...
 </p>
 <p id="iterated_score_1">
-which is, wow, actually <i>impressively</i> bad.
+které je, jak to říct, <i>hodně</i> špatné.
 </p>
 <p id="iterated_score_2">
-which, uh, could be worse!
+které, no, mohlo to být horší!
 </p>
 <p id="iterated_score_3">
-which ain't bad!
+
+které není špatné!
 </p>
 <p id="iterated_score_4">
-which is pretty good!
+které je celkem dobré!
 </p>
 <p id="iterated_score_5">
-which is <i>perfect!</i> Congrats you have too much time on your hands.
+které je <i>perfektní!</i> Gratulujeme ti, zřejmě máš k dispozici hodně času.
 </p>
 <p id="iterated_score_x">
-...i have no idea how you did that.
+...vůbec nevím, jak jsi tohle udělal.
 </p>
 <p id="iterated_score_end">
-(the lowest &amp; highest possible scores are 7 and 49, respectively)
+(nejnižší &amp; nejvyšší možné skóre je 7 a 49)
 </p>
 
 <p id="who_were">
-So who were these strange characters you just played against?
+Kdože byli ti cizinci, se kterými jsi hrál?
 </p>
 
 <p id="character_tft">
-<b>COPYCAT:</b>
-Hello! I start with Cooperate, and afterwards, I just copy whatever you did in the last round. Meow
+<b>KOPÍRKA:</b>
+Ahoj! Já začínám Spoluprací a poté kopíruji co jsi udělal v minulém kole ty.
 </p>
 
 <p id="character_all_d">
-<b>ALWAYS CHEAT:</b>
-<i>the strong shall eat the weak</i>
+<b>PODVODNÍK:</b>
+<i>silnější pes mr..</i>
 </p>
 
 <p id="character_all_c">
-<b>ALWAYS COOPERATE:</b>
-Let's be best friends! &lt;3
+<b>SLUNÍČKO:</b>
+Budeme nejlepší přátelé! &lt;3
 </p>
 
 <p id="character_grudge">
-<b>GRUDGER:</b>
-Listen, pardner. I'll start cooperatin', and keep cooperatin',
-but if y'all ever cheat me, I'LL CHEAT YOU BACK 'TIL THE END OF TARNATION.
+<b>PARDÁL:</b>
+Hele, mladej. začnu s tebou spolupracovat, a budu v tom pokračovat,
+ale jestli mě jednou podvedeš, BUDU PODVÁDĚT DO SKONÁNÍ SVĚTA.
 </p>
 
 <p id="character_prober">
-<b>DETECTIVE:</b>
-First: I analyze you. I start: Cooperate, Cheat, Cooperate, Cooperate.
-If you cheat back, I'll act like <span class="tft">Copycat</span>.
-If you never cheat back, I'll act like <span class="all_d">Always Cheat</span>, to exploit you.
-Elementary, my dear Watson.
+<b>DETEKTIV:</b>
+Nejdříve si tě analyzuji. Začnu Spolupráce, Podvod, Spolupráce, Spolupráce.
+Pokud mě podvedeš, budu se chovat jako <span class="tft">Kopírka</span>.
+Pokud mě nikdy nepodvedeš, budu se chovat jako <span class="all_d">Podvodník</span>, abych tě dostal.
+Jak prosté, milý Watsone.
 </p>
 
 <p id="characters_teaser">
-Now, what if these characters were to play...
+A teď co se stane, když budou všechny postavy...
 </p>
 <p id="characters_button">
-...against each other? &rarr;
+...hrát proti sobě? &rarr;
 </p>
 
 
@@ -1009,126 +1010,126 @@ check out
 <!-- - - - - THE PLAYERS - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
 
-<p id="label_tft">Copycat</p>
+<p id="label_tft">Kopírka</p>
 <p id="label_short_tft">
-copycat
+kopírka
 </p>
 <p id="icon_tft">
 <span class="tft">
 	<span class="icon"></span>
-	<span class="icon_label">Copycat</span>
+	<span class="icon_label">Kopírka</span>
 </span>
 </p>
 
-<p id="label_all_d">Always Cheat</p>
+<p id="label_all_d">Podvodník</p>
 <p id="label_short_all_d">
-cheater
+podvodník
 </p>
 <p id="icon_all_d">
 <span class="all_d">
 	<span class="icon"></span>
-	<span class="icon_label">All Cheat</span>
+	<span class="icon_label">Podvodník</span>
 </span>
 </p>
 
-<p id="label_all_c">Always Cooperate</p>
+<p id="label_all_c">Sluníčko</p>
 <p id="label_short_all_c">
-cooperator
+sluníčko
 </p>
 <p id="icon_all_c">
 <span class="all_c">
 	<span class="icon"></span>
-	<span class="icon_label">All Cooperate</span>
+	<span class="icon_label">Sluníčko</span>
 </span>
 </p>
 
-<p id="label_grudge">Grudger</p>
+<p id="label_grudge">Pardál</p>
 <p id="label_short_grudge">
-grudger
+pardál
 </p>
 <p id="icon_grudge">
 <span class="grudge">
 	<span class="icon"></span>
-	<span class="icon_label">Grudger</span>
+	<span class="icon_label">Pardál</span>
 </span>
 </p>
 
-<p id="label_prober">Detective</p>
+<p id="label_prober">Detektiv</p>
 <p id="label_short_prober">
-detective
+detektiv
 </p>
 <p id="icon_prober">
 <span class="prober">
 	<span class="icon"></span>
-	<span class="icon_label">Detective</span>
+	<span class="icon_label">Detektiv</span>
 </span>
 </p>
 
-<p id="label_tf2t">Copykitten</p>
+<p id="label_tf2t">Kopírčička</p>
 <p id="label_short_tf2t">
-copykitten
+kopírčička
 </p>
 <p id="icon_tf2t">
 <span class="tf2t">
 	<span class="icon"></span>
-	<span class="icon_label">Copykitten</span>
+	<span class="icon_label">Kopírčička</span>
 </span>
 </p>
 
-<p id="label_pavlov">Simpleton</p>
+<p id="label_pavlov">Honza</p>
 <p id="label_short_pavlov">
-simpleton
+honza
 </p>
 <p id="icon_pavlov">
 <span class="pavlov">
 	<span class="icon"></span>
-	<span class="icon_label">Simpleton</span>
+	<span class="icon_label">Honza</span>
 </span>
 </p>
 
-<p id="label_random">Random</p>
+<p id="label_random">Šílenec</p>
 <p id="label_short_random">
-random
+šílenec
 </p>
 <p id="icon_random">
 <span class="random">
 	<span class="icon"></span>
-	<span class="icon_label">Random</span>
+	<span class="icon_label">Šílenec</span>
 </span>
 </p>
 
 <p id="forgot_whos_who">
-(forgot who's who? hover buttons to see descriptions of each character!)
+(nevíš kdo je kdo? přejeď přes tlačítka aby jsi zjistil popis postavy!)
 </p>
 <p id="who_tft">
-Starts with Cooperate. Then, it simply repeats whatever YOU did in the last round.
+Začíná Spoluprací. Pak opakuje co jsi v minulém kole udělal TY.
 </p>
 <p id="who_all_d">
-Always cheats.
+Vždy podvádí.
 </p>
 <p id="who_all_c">
-Always cooperates.
+Vždy spolupracuje
 </p>
 <p id="who_grudge">
-Starts with Cooperate, and keeps cooperating until you cheat it even once.
-Afterwards, it always plays Cheat.
+Začíná Spoluprací a spolupracuje dokud jej nepodvedeš.
+Poté stále podvádí.
 </p>
 <p id="who_prober">
-Starts with: Cooperate, Cheat, Cooperate, Cooperate.
-Afterwards, if you ever retaliate with a Cheat, it plays like a Copycat.
-Otherwise, it plays like an Always Cheat.
+Začníná: Spolupráce, Podvod, Spolupráce, Spolupráce.
+Pokud jsi jej podvedl, hraje jako Kopírka.
+Jinak hraje jako Podvodník.
 </p>
 <p id="who_tf2t">
-Starts with Cooperate.
-Only retaliates with a Cheat if you cheated it TWICE in a row.
+Začíná Spoluprací.
+Zahraje Podvod pokud jej podvedeš DVAKRÁT po sobě.
 </p>
 <p id="who_pavlov">
-Starts with Cooperate.
-Then, if you cooperated in last round, it repeats its last move (even if it was an accident).
-But if you cheated in last round, it switches its last move (even if it was an accident).
+Začíná Spoluprací.
+Pokud jsi v minulém kole spolupracoval, zopakuje svůj poslední tah (i kdyby šlo o nehodu)
+Pokud jsi v minulém kole podváděl, změní svůj poslední tah (i kdyby šlo o nehodu)
 </p>
 <p id="who_random">
-Randomly cheats or cooperates with 50-50 chance
+Náhodně volí Spolupráci nebo Podvod s šancí 50:50
 </p>
 
 
@@ -1137,11 +1138,11 @@ Randomly cheats or cooperates with 50-50 chance
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_cooperate">
-Spolupracovat
+Spolupráce
 </p>
 
 <p id="label_cheat">
-Podvádět
+Podvádění
 </p>
 
 <p id="label_play">
