Translate another two chapters

--- a/words.html
+++ b/words.html
@@ -6,29 +6,29 @@ TRANSLATION NOTES:
 
 When translating this thing, only edit the stuff that's BETWEEN the <tags>, like so:
 
-    <p id="still_english">hello</p>
-    =>
-    <p id="still_english">bonjour</p>
+<p id="still_english">hello</p>
+=>
+<p id="still_english">bonjour</p>
 
 Also, DON'T change anything between the [square brackets], like so:
 
-    Number #[N]
-    =>
-    Numero #[N]
+Number #[N]
+=>
+Numero #[N]
 
 Exception to the "don't change tags" rule:
 Feel free to move around the italics & bold tags, so that the emphasis
 on the right phrases/words still makes sense!
 
-    <i>italics</i>
-    <b>bold</b>
+<i>italics</i>
+<b>bold</b>
 
 Also, some HTML weirdness you might want to know:
 
-    &amp; is an ampersand "&" sign
-    &#8226; is a dot
-    &rarr; is a rightward-facing arrow
-    &lt; is a "<" sign
+&amp; is an ampersand "&" sign
+&#8226; is a dot
+&rarr; is a rightward-facing arrow
+&lt; is a "<" sign
 
 ALSO! I'd love for you to credit yourself as a translator!
 You can add your own name in the <p id="subtitle"> section
@@ -298,101 +298,101 @@ A teď co se stane, když budou všechny postavy...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="place_your_bets">
-It's tournament time!
-Each character will now play against every other character:
-that's 10 paired matches, and 10 rounds per match.
+Začíná turnaj!
+Všechny postavy nyní budou hrát proti sobě:
+to znamená 10 zápasů, 10 kol na zápas.
 <br><br>
-Who do you think will get the highest <i>total</i> score?
-<b>Think carefully about it... and then
-PLACE YOUR BETS:</b>
+Kdo si myslíš, že získá nejvíc bodů <i>celkem</i>?
+<b>Důkladně si to promysli.. a potom
+SI VYBER:</b>
 </p>
 
 <p id="tournament_intro">
-Alright, you placed your bet on [CHAR]!
-Let's go through the matches one by one, and see how the tournament plays out...
+Paráda, tvůj šampion je [CHAR]!
+Pojďme projít zápasy jeden po druhém a uvidíme jak turnaj dopadne...
 </p>
 
 <p id="first_match">
-first match &rarr;
+první zápas &rarr;
 </p>
 
 <p id="next_match">
-next match &rarr;
+další zápas &rarr;
 </p>
 
 <p id="match_header_1">
-<b>Match #[N]:</b> [A] vs [B]
+<b>Zápas #[N]:</b> [A] vs [B]
 </p>
 <p id="match_header_2">
-<b>Rounds:</b>
+<b>Počet kol:</b>
 </p>
 <p id="match_header_3">
-<b>Total Scores:</b> [A] vs [B]
+<b>Celkové skóre:</b> [A] vs [B]
 </p>
 
 <p id="tournament_1">
-Oh, by the way...
+Mimochodem...
 </p>
 <p id="tournament_2">
-...You may be skeptical about that Christmas Truce story about the World War I trenches.
-Surely that was just a fluke?
+... Nejspíš tak úplně nevěříš té pohádce o vánočním míru v zákopech 1. světové války.
+Určitě to nebyl jen výmysl?
 </p>
 <p id="tournament_3">
-Yes, the truce was dramatic, but it was <i>neither unique, nor unusual</i>.
+Ano, příměří bylo dramatické ale <i>nebylo jedinečné ani neobvyklé</i>.
 </p>
 <p id="tournament_4">
-Not <i>every</i> trench joined in the peace, but it was pretty widespread.
-Many front-lines came up with the idea independently, and again: <i>despite</i> specific, strict orders not to.
+Ne <i>všechny</i> zákopy se k příměří přidaly, ale bylo to celkem běžné.
+Hodně zákopů v přední linii přišlo s touto myšlenkou nezávisle na sobě <i>i přes</i> jasný rozkaz nedělat to.
 </p>
 <p id="tournament_5">
-And in fact, even <i>before</i> Christmas, several front-lines already <i>had</i>
-established an unofficial, secret peace.
+Popravdě i <i>před</i> Vánocemi měli některé části fronty 
+<i>ustanoveno</i >neoficiální, tajné příměří.
 </p>
 <p id="tournament_6">
-They called it: <b>the "live and let live" system.</b>
-Basically, you don't shoot me, I don't shoot you. And this worked, in a lot of places!
+Nazývali jej systém <b>"žij a nech žít"</b>
+V podstatě: Ty nezastřelíš mě a já nezastřelím tebe. A fungovalo to na spoustě míst.
 </p>
 <p id="tournament_7">
-You may still be skeptical. Most soldiers don't spontaneously form peace with the enemy.
-What's so special about <i>trench</i> warfare? 
+Možná tomu nevěříš. Většina vojáků se přeci jenom tak neusmíří s nepřítelem.
+Co je zvláštního na <i>zákopové</i> válce?
 </p>
 <p id="tournament_8">
-Well, here's what's unique about the trenches:
-unlike almost every other form of war,
-you have to face the same <i>specific soldiers</i> every day.
+Na zákopové válce je zvláštní toto:
+narozdíl od jakékoliv jiné podoby války,
+musíš čelit tváří v tvář <i>stejnému vojákovi</i> každý den.
 </p>
 <p id="tournament_9">
-<b>It's a repeated game.</b> And that makes <i>all</i> the difference.
+<b>Hra se pořád opakuje.</b> A to je to, co mění <i>vše</i>.
 </p>
 <p id="tournament_10">
-Anyway. And the winner is...
+Nicméně, vítězem se stává...
 </p>
 
 <p id="the_winner_is">
-(drumroll please...) &rarr;
+(fanfáry, prosím...) &rarr;
 </p>
 
 <p id="tournament_winner_1">
-<b class="tft">COPYCAT!</b>
+<b class="tft">KOPÍRKA!</b>
 </p>
 <p id="tournament_winner_2_yay">
-Congrats, you placed your bet on the right horse.
+Gratulujeme, vybral jsi si správného šampiona.
 </p>
 <p id="tournament_winner_2_nay">
-(Apologies to your bet, [CHAR].)
+(Škoda, vybral jsi, že vyhraje [CHAR].)
 </p>
 <p id="tournament_winner_3">
-<span class="tft">Copycat</span> goes by many names.
-The Golden Rule, reciprocal altruism, tit for tat, or... <b>live and let live.</b>
-That's why "peace" could emerge in the trenches of World War I:
-when you're forced to play the same game with the
-same <i>specific people</i> (not just the same generic "enemy") over and over again --
-<span class="tft">Copycat</span> doesn't just win the battle, it wins the war.
+<span class="tft">Kopírka</span> má mnoho jmen.
+Zlaté pravidlo, oko za oko.. nebo <b>žij a nech žít.</b>
+Proto se objevoval "mír" v zákopech 1. světové války:
+když musíš hrát stejnou hru se stejnými 
+<i>konkrétními lidmi</i> (ne pouze s obecným "nepřítelem") pořád dokola --
+<span class="tft">Kopírka</span> nevyhraje pouze bitvu, vyhraje válku.
 <br><br>
-But if things change a lot when you play multiple rounds of the same game, what if we play...
+Ale pokud se věci mění pokud hrajeme více kol stejné hry, co kdybychom zopakovali...
 </p>
 <p id="tournament_teaser">
-...multiple <i>tournaments?</i> &rarr;
+...více <i>turnajů?</i> &rarr;
 </p>
 
 
@@ -401,181 +401,181 @@ But if things change a lot when you play multiple rounds of the same game, what 
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="evolution_intro">
-Now, let's let our population of players <i>evolve over time</i>. It's a 3-step dance:
+Co když necháme naši populaci hráčů <i>vyvíjet se v čase</i>. Vývoj má 3 části:
 </p>
 <p id="evolution_intro_1">
-<b>1. PLAY A TOURNAMENT</b><br>
-Let them all play against each other, and tally up their scores.
+<b>1. TURNAJ</b><br>
+Necháme všechny hrát proti všem a sečteme jejich skóre.
 </p>
 <p id="evolution_intro_2">
-<b>2. ELIMINATE LOSERS</b><br>
-Get rid of the 5 worst players. (if there's a tie, pick randomly between them)
+<b>2. ODSTRANÍME PORAŽENÉ</b><br>
+Zbavíme se 5 nejhorších hráčů. (v případě remízy vybereme náhodně)
 </p>
 <p id="evolution_intro_3">
-<b>3. REPRODUCE WINNERS</b><br>
-Clone the 5 best players. (if there's a tie, pick randomly between them)
+<b>3. PŘIDÁME VÝHERCE</b><br>
+Naklonujeme 5 nejlepších hráčů. (v případě remízy vybereme náhodně)
 </p>
 <p id="evolution_intro_footer">
-...and REPEAT, for as long as you'd like.
-Note: you don't have to wait for people to literally die &amp; reproduce for culture to evolve --
-all that's needed is that "unsuccessful" behaviors go away, and "successful" behaviors are imitated.
-So now...
+...a OPAKUJEME tak dlouho jak budeme chtít.
+Poznámka: pro změnu kultury nemusíš čekat až lidé doopravdy zemřou a rozmnoží se --
+je pouze potřeba "neúspěšné" chování nechat být a opakovat "úspěšné" chování.
+A nyní...
 </p>
 <p id="evolution_intro_button">
-...let's see this in action. &rarr;
+...pojďme to zkusit. &rarr;
 </p>
 
 <p id="evo_1">
-Say we start with the following population of players:
-<span class="all_c">15 Always Cooperates</span>,
-<span class="all_d">5 Always Cheats</span>, and
-<span class="tft">5 Copycats</span>.
-(We'll ignore <span class="grudge">Grudger</span> &amp; <span class="prober">Detective</span> for now)
+Začneme s následující populací hráčů:
+<span class="all_c">15 Sluníček</span>,
+<span class="all_d">5 Podvodníků</span>, and
+<span class="tft">5 Kopírek</span>.
+(Zatím neuvažujeme <span class="grudge">Pardála</span> &amp; <span class="prober">Detektiva</span>)
 <br><br>
-We're going to do the tournament-eliminate-reproduce dance a dozen times or so.
-Let's make another bet! Who do you think will win the <i>first</i> tournament?
-<b>PLACE YOUR BETS, AGAIN:</b>
+Několikrát teď uděláme kolečko turnaj-eliminace-reprodukce.
+Pojďme si znovu vsadit! Kdo podle tebe vyhraje <i>první</i> turnaj?
+<b>ZNOVU SI VSAĎ</b>
 </p>
 
 <p id="evo_2_all_c">
-Makes sense, <span class="all_c">Always Cooperate</span> outnumbers everyone else right now...
+To dává smysl. <span class="all_c">Sluníček</span> je ze všech nejvíc...
 </p>
 <p id="evo_2_all_d">
-Makes sense, <span class="all_d">Always Cheat</span> has a lot of <span class="all_c">Always Cooperates</span> to exploit...
+To dává smysl. <span class="all_d">Podvodník</span> to může <span class="all_c">Sluníčkům</span> hodně zavařit...
 </p>
 <p id="evo_2_tft">
-Makes sense, <span class="tft">Copycat</span> won the tournament last time, why not again?...
+To dává smysl. <span class="tft">Kopírka</span> vyhrál turnaj naposledy, proč ne znovu?...
 </p>
 <p id="evo_2">
-Let's see if you're correct:
+Zjistíme, jestli máš pravdu:
 </p>
 
 <p id="label_play_tournament">
-1) play tournament
+1) zahaj turnaj
 </p>
 <p id="label_eliminate_bottom_5">
-2) eliminate bottom 5
+2) odeber posledních 5
 </p>
 <p id="label_reproduce_top_5">
-3) reproduce top 5
+3) naklonuj prvních 5
 </p>
 
 <p id="evo_3_all_c">
-Alas, <span class="all_c">Always Cooperate</span> got eaten up by
-<span class="all_d">Always Cheat</span>, whose numbers have now increased by 5.
+Ale ne, <span class="all_c">Sluníčka</span> byla převálcována
+<span class="all_d">Podvodníky</span>, jejichž počet se zvýšil o 5.
 </p>
 <p id="evo_3_all_d">
-Sadly, you were correct! The <span class="all_d">Always Cheaters</span> won this time, 
-and their numbers increased by 5.
+ 
+Bohužel jsi měl pravdu! <span class="all_d">Podvodníci</span> tentokrát vyhráli
+a rozšířili své řady o 5 dalších.
 </p>
 <p id="evo_3_tft">
-Alas, <span class="tft">Copycat</span> did not win – but at least they didn't do as bad
-as <span class="all_c">Always Cooperate</span>. They got eaten up by <span class="all_d">Always Cheat</span>,
-whose numbers have now increased by 5.
+Bohužel, <span class="tft">Kopíráci</span> nevyhráli – ale nevedli si tak špatně jako
+as <span class="all_c">Sluníčka</span>. Ta byla převálcována <span class="all_d">Podvodníky</span>,
+kteří rozšířili své řady o 5 dalších.
 </p>
 <p id="evo_3">
-But let's try a few more rounds of this...
+Ale zkusme pár dalších kol...
 </p>
 
 <p id="evo_4">
-<span class="all_d">Always Cheat</span> is still growing,
-at the expense of <span class="all_c">Always Cooperate</span>...
+<span class="all_d">Podvodníků</span> je čím dál tím víc,
+na úkor <span class="all_c">Sluníček</span>...
 </p>
 
 <p id="evo_5">
-And now, all the <span class="all_c">Always Cooperates</span> are dead.
-But, wait...
+A teď jsou všechna <span class="all_c">Sluníčka</span> mrtvá.
+Ale počkat...
 </p>
 
 <p id="evo_6">
-That's right: the <span class="all_d">Always Cheats</span> became a victim of their own success!
-They exploited the naive <span class="all_c">Always Cooperators</span>,
-but once they ran out of them, they had to face the <span class="tft">Copycats</span>:
-who <i>are</i> nice, but not naive.
+Přesně tak: <span class="all_d">Podvodníci</span> se stali obětí vlastního triumfu!
+Využili naivních <span class="all_c">Sluníček</span>,
+ale jakmile žádná neexistují, musí čelit <span class="tft">Kopírkám</span>:
+kteří <i>jsou</i> milí, ale ne naivní.
 </p>
 
 <p id="evo_7">
-By simply copying the other player's moves,
-<span class="tft">Copycats</span> can play nice with each other,
-while <span class="all_d">Always Cheats</span> just cheat themselves!
-Not only that, but it also means <span class="tft">Copycat</span>
-can give <span class="all_d">Always Cheat</span>
-a taste of their own medicine.
+Prostým kopírováním tahů protihráče, mohou
+<span class="tft">Kopírky</span> vycházet jeden s druhým,
+zatímco <span class="all_d">Podvodníci</span> podvedou sami sebe!
+A nejen to, také to znamená, že <span class="tft">Kopírka</span>
+vrátí <span class="all_d">Podvodníkovi</span> úder.
 </p>
 
 <p id="evo_8">
-And so, as a result...
+A tak...
 </p>
 
 <p id="evo_9">
-...<span class="tft">Copycat</span> inherits the earth.
+...<span class="tft">Kopírky</span> přežijí.
 </p>
 <p id="evo_9_all_c">
-So, although your bet was off -- the nice-but-naive <span class="all_c">Always Cooperators</span>
-were doomed from the start -- in the end, a <i>smart</i> form of niceness prevailed,
-and the <span class="all_d">Always Cheaters</span> were squashed.
+I když tvůj tip nevyšel -- hodná ale naivní <span class="all_c">Sluníčka</span> byla 
+odsouzena k zániku už ze začátku -- nakonec vyhrála <i>chytrá</i> varianta dobra
+a <span class="all_d">Podvidníci</span> byli zničeni.
 </p>
 <p id="evo_9_all_d">
-So, in the short run you were right - <span class="all_d">Always Cheat</span> won the first few rounds,
-but in the end, its exploitativeness was its downfall.
+V krátkodobém horizontu by jsi měl pravdu <span class="all_d">Podvodníci</span> vyhrají prvních pár kol,
+ale nakonec je jejich využívání dovede k záhubě.
 </p>
 <p id="evo_9_tft">
-So, in the long run, you were right - <span class="tft">Copycat</span> wins!
-<span class="all_d">Always Cheat</span> may have won in the short run,
-but its exploitativeness was its downfall.
+V dlohodobém horizontu jsi měl pravdu - <span class="tft">Kopírky</span> vyhrávají
+<span class="all_d">Podvodníci</span> mohou vyhrát pár kol, 
+ale nakonec je jejich využívání dovede k záhubě.
 </p>
 <p id="evo_9_end">
-This reminds me of a quote:
+To mi připomíná citát:
 <br><br>
-<i>"We are punished by our sins, not for them."</i><br>
+<i>"Jsme trestáni vlastními hříchy, ne za ně."</i><br>
 ~ Elbert Hubbard
 </p>
 <p id="evo_9_btn">
-(oh, and by the way...)
+(a mimochodem...)
 </p>
 
 <p id="evo_10">
-(...this result is similar even if we put
-<span class="grudge">Grudger</span> &amp; <span class="prober">Detective</span> back in:)
+(...výsledek bude stejný i když do turnaje přidáme
+<span class="grudge">Pardála</span> &amp; <span class="prober">Detektiva</span>
 </p>
 
 <p id="evo_autoplay">
-start the evolution process!
+zahájit proces evoluce!
 </p>
 <p id="evo_autoplay_stop">
-stop the evolution process
+ukončit proces evoluce
 </p>
 
 <p id="evo_10_followup">
-(Note: sometimes, a few <span class="grudge">Grudgers</span> may stick around,
-because when all players except <span class="grudge">Grudger</span> &amp; <span class="tft">Copycat</span> 
-are eliminated, the two tie.)
+(Poznámka: občas se může pár <span class="grudge">Pardálů</span> poflakovat kolem,
+pokud jsou odstraněni všichni kromě <span class="grudge">Pardálů</span> &amp; <span class="tft">Kopírek</span> 
+je mezi nimi remíza.)
 <br><br>
-So, it seems the math of game theory is telling us something:
-that <span class="tft">Copycat's</span> philosophy,
-"Do unto others as you would have them do unto you", may be not just a 
-<i>moral</i> truth, but also a <i>mathematical</i> truth.
-However...
+Vypadá to, jako by nám teorie her říkala:
+filozofie <span class="tft">Kopírky</span>,
+"Chovej se k ostatním tak, jak chceš aby se oni chovali k tobě", je nejen 
+<i>morální</i> pravdou, ale i <i>matematickou/i> pravdou.
+Nicméně...
 </p>
 <p id="evo_10_btn">
-...there's a problem: &rarr;
+...je tu jeden problém: &rarr;
 </p>
 
 <p id="evo_11">
-Look around. The world's full of total jerkwads.
+Podívej se kolem sebe. Svět je plný pitomců.
 <br><br>
-If <span class="tft">Copycat</span> is the strategy in this repeated game of trust that's so powerful --
-that even soldiers in World War I trenches independently "evolved" a similar strategy, called "live and let live" -- 
-why, then, are there so many un-trusting, un-trustworthy people?
-What's causing our epidemic of un-trust?
+Pokud je strategie <span class="tft">Kopírek</span> v této opakované hře důvěry tak silná --
+že dokonce vojácí v zákopech 1. světové války dospěli ke strategii "žij a nech žít" --
+proč je tu pak kolem tolik nedůvěřivých, nedůvěryhodných lidí?
+Co způsobuje tuhle epidemii nedůvěry
 <br><br>
-A clue's in that sentence itself. "In <i>this</i> repeated game of trust."
-So far we've only talked about change in the players:
-what about <i>a change in the game?</i>
-What could lead to...
+Vodítko je ve větě samotné. "V <i>této</i>opakované hře důvěry."
+Zatím jsme se bavili jenom o změně ve hráčích:
+Co když <i>změníme samotnou hru?</i>
+Mohlo by to vést k...
 </p>
 <p id="evo_11_btn">
-...the evolution of <i>distrust?</i>
+... evoluci <i>nedůvěry?</i>
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -1016,8 +1016,8 @@ kopírka
 </p>
 <p id="icon_tft">
 <span class="tft">
-	<span class="icon"></span>
-	<span class="icon_label">Kopírka</span>
+<span class="icon"></span>
+<span class="icon_label">Kopírka</span>
 </span>
 </p>
 
@@ -1027,8 +1027,8 @@ podvodník
 </p>
 <p id="icon_all_d">
 <span class="all_d">
-	<span class="icon"></span>
-	<span class="icon_label">Podvodník</span>
+<span class="icon"></span>
+<span class="icon_label">Podvodník</span>
 </span>
 </p>
 
@@ -1038,8 +1038,8 @@ sluníčko
 </p>
 <p id="icon_all_c">
 <span class="all_c">
-	<span class="icon"></span>
-	<span class="icon_label">Sluníčko</span>
+<span class="icon"></span>
+<span class="icon_label">Sluníčko</span>
 </span>
 </p>
 
@@ -1049,8 +1049,8 @@ pardál
 </p>
 <p id="icon_grudge">
 <span class="grudge">
-	<span class="icon"></span>
-	<span class="icon_label">Pardál</span>
+<span class="icon"></span>
+<span class="icon_label">Pardál</span>
 </span>
 </p>
 
@@ -1060,8 +1060,8 @@ detektiv
 </p>
 <p id="icon_prober">
 <span class="prober">
-	<span class="icon"></span>
-	<span class="icon_label">Detektiv</span>
+<span class="icon"></span>
+<span class="icon_label">Detektiv</span>
 </span>
 </p>
 
@@ -1071,8 +1071,8 @@ kopírčička
 </p>
 <p id="icon_tf2t">
 <span class="tf2t">
-	<span class="icon"></span>
-	<span class="icon_label">Kopírčička</span>
+<span class="icon"></span>
+<span class="icon_label">Kopírčička</span>
 </span>
 </p>
 
@@ -1082,8 +1082,8 @@ honza
 </p>
 <p id="icon_pavlov">
 <span class="pavlov">
-	<span class="icon"></span>
-	<span class="icon_label">Honza</span>
+<span class="icon"></span>
+<span class="icon_label">Honza</span>
 </span>
 </p>
 
@@ -1093,8 +1093,8 @@ honza
 </p>
 <p id="icon_random">
 <span class="random">
-	<span class="icon"></span>
-	<span class="icon_label">Šílenec</span>
+<span class="icon"></span>
+<span class="icon_label">Šílenec</span>
 </span>
 </p>
 
